# JusDNCE-core2

./: .env.example  .env.local.example  App.tsx  CLAUDE.md  DEV_CHANGELOG.md  ENHANCED_SYSTEM_GUIDE.md  README.md  VIRTUAL_FRAME_SYSTEM.md  constants.ts  deploy.sh  firebase.json  firestore.indexes.json  firestore.rules  index.html  metadata.json  package-lock.json  package.json  storage.rules  test-fix-verification.js  test-generation.js  types.ts  vite.config.ts
.firebase/: hosting.ZGlzdA.cache
.github/workflows/: deploy.yml
archive/2025-12-10_pre-fluid-merge/: gemini.ts  (+1 more)
components/: AnimationStudio.tsx  EnhancedAnimationStudio.tsx  HelpSystem.tsx  Modals.tsx  Onboarding.tsx  Step4Preview.tsx  Step4Preview_Archive_V1.tsx  Step4Preview_Archive_V2.tsx  Steps.tsx  TimelineSelector.tsx
docs/: BUILD_PLAN_V2.md  DOMAIN_SETUP_GUIDE.md  PROJECT_ANALYSIS.md  STYLE_PRESET_THUMBNAILS.md  WIDGET_UNIVERSAL_PLAYER.md
extensions/: firestore-stripe-payments.env
functions/: package-lock.json  package.json
public/: 404.html
scripts/: generate-style-thumbnails.ts
services/: AdaptiveCameraManager.ts  AdaptiveChoreographyIntegration.ts  AdaptiveLightingManager.ts  AnimationDirector.ts  CameraSequenceManager.ts  ChoreographyBrain.ts  ChunkedExportService.ts  EngagementManager.ts  LightingDirector.ts  PaymentService.ts  PredictiveChoreographyEngine.ts  ProductionPipeline.ts  VIB34DIntegration.ts  batchGeneration.ts  firebase.ts  firestore.ts  gemini.ts  playerExport.ts
utils/: watermark.ts
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs  mipmap.rs  normalize.rs  sdf.rs
(+41 files in other folders)
