[package]
name = "virtual-frame-wasm"
version = "0.1.0"
edition = "2021"
authors = ["jusDNCE Team"]
description = "High-performance WASM modules for Virtual Frame animation system"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# For future SIMD optimization
# packed_simd = { version = "0.3", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true

[features]
default = []
# simd = ["packed_simd"]
